// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checkbox interaction should render checked checkbox 1`] = `
<div>
  <label
    class="MuiFormControlLabel-root FormControlLabel-root Checkbox-root"
  >
    <span
      class="MuiButtonBase-root MuiIconButton-root MuiPrivateSwitchBase-root MuiCheckbox-root Checkbox-root MuiCheckbox-colorSecondary MuiPrivateSwitchBase-checked MuiCheckbox-checked"
    >
      <span
        class="MuiIconButton-label"
      >
        <div
          class="Checkbox-checkedIcon"
        />
        <input
          class="MuiPrivateSwitchBase-input"
          data-indeterminate="false"
          type="checkbox"
          value=""
        />
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </span>
    <span
      class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label"
    >
      <label
        class="MuiFormLabel-root MuiInputLabel-root InputLabel-root MuiInputLabel-animated FormLabel-root FormLabel-control"
      >
        Select item
      </label>
    </span>
  </label>
</div>
`;

exports[`renders default checkbox without label 1`] = `
<div>
  <span
    class="MuiButtonBase-root MuiIconButton-root MuiPrivateSwitchBase-root MuiCheckbox-root Checkbox-root MuiCheckbox-colorSecondary"
  >
    <span
      class="MuiIconButton-label"
    >
      <div
        class="Checkbox-uncheckedIcon"
      />
      <input
        class="MuiPrivateSwitchBase-input"
        data-indeterminate="false"
        type="checkbox"
        value=""
      />
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </span>
</div>
`;

exports[`renders disabled state 1`] = `
<div>
  <span
    class="MuiButtonBase-root MuiButtonBase-disabled MuiIconButton-root MuiIconButton-disabled MuiPrivateSwitchBase-root MuiCheckbox-root Checkbox-root MuiCheckbox-colorSecondary MuiPrivateSwitchBase-disabled MuiCheckbox-disabled Checkbox-disabled"
    tabindex="-1"
  >
    <span
      class="MuiIconButton-label"
    >
      <div
        class="Checkbox-uncheckedIcon"
      />
      <input
        class="MuiPrivateSwitchBase-input"
        data-indeterminate="false"
        disabled=""
        type="checkbox"
        value=""
      />
    </span>
  </span>
</div>
`;

exports[`renders indeterminate state 1`] = `
<div>
  <span
    class="MuiButtonBase-root MuiIconButton-root MuiPrivateSwitchBase-root MuiCheckbox-root Checkbox-root MuiCheckbox-colorSecondary MuiCheckbox-indeterminate"
  >
    <span
      class="MuiIconButton-label"
    >
      <div
        class="Checkbox-indeterminateIcon"
      />
      <input
        class="MuiPrivateSwitchBase-input"
        data-indeterminate="true"
        type="checkbox"
        value=""
      />
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </span>
</div>
`;

exports[`should render default checkbox with label 1`] = `
<div>
  <label
    class="MuiFormControlLabel-root FormControlLabel-root Checkbox-root"
  >
    <span
      class="MuiButtonBase-root MuiIconButton-root MuiPrivateSwitchBase-root MuiCheckbox-root Checkbox-root MuiCheckbox-colorSecondary"
    >
      <span
        class="MuiIconButton-label"
      >
        <div
          class="Checkbox-uncheckedIcon"
        />
        <input
          class="MuiPrivateSwitchBase-input"
          data-indeterminate="false"
          type="checkbox"
          value=""
        />
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </span>
    <span
      class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label"
    >
      <label
        class="MuiFormLabel-root MuiInputLabel-root InputLabel-root MuiInputLabel-animated FormLabel-root FormLabel-control"
      >
        Select item
      </label>
    </span>
  </label>
</div>
`;
